crates/rolldown/tests/rolldown/errors/missing_export/main.js
import { importedA, importedB as b } from "./foo"
export { importedC, importedD as d } from "./foo"

import importedE from "./foo"
import { default as f } from "./foo"
export { default as g } from "./foo"
